--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Hola Mundo</h1>
-    <h1>UwW</h1>
+    <h1>UwU</h1>
+
+    <img src="img/Gif1.gif" alt="">
+    <img src="img/Gif2.gif" alt="">
 </body>
 </html>
