--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 
     <img src="img/Gif1.gif" alt="">
     <img src="img/Gif2.gif" alt="">
+    <img src="img/foto1.jfif" alt="">
 </body>
 </html>
