--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <img src="img/Gif1.gif" alt="">
     <img src="img/Gif2.gif" alt="">
     <img src="img/foto1.jfif" alt="">
+    <img src="img/skkipy.jpg" alt="">
+    <img src="img/chad.jpg" alt="">
+    <img src="img/Xavier.jpg" alt="">
 </body>
 </html>
