Hemos añadido una sengunda pagina

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h1>Hola Mundo</h1>
-    <h1>UwU</h1>
+    
+    <h2><a href="segundo.html">Segundo HTML</a></h1>
 
     <img src="img/Gif1.gif" alt="">
     <img src="img/Gif2.gif" alt="">
@@ -17,5 +18,8 @@
     <img src="img/skkipy.jpg" alt="">
     <img src="img/chad.jpg" alt="">
     <img src="img/Xavier.jpg" alt="">
+    <img src="img/vegetta.jpg" alt="">
+    <img src="img/Willy.gif" alt="">
+    
 </body>
 </html>
